--- a/public/mycss.css
+++ b/public/mycss.css
@@ -1,3 +1,14 @@
-h1{
-  background-color: yellow;
+.jumbotron{
+  text-align: center;
+  background-image: url('header.jpg');
+  background-size: cover;
+}
+
+.bodybg{
+  background-color: #343a40;
+}
+
+h6{
+  text-align: center;
+  color: white;
 }
